--- a/src/App.css
+++ b/src/App.css
@@ -25,21 +25,79 @@ input[type="range"]::-webkit-slider-thumb {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
-  gap: 20px;
-}
-.button {
-  padding: 10px;
-  border: none;
-  background-color: darksalmon;
-  font-size: 25px;
-  border-radius: 10px;
-  cursor: pointer;
+  height: 100%;
+  gap: 50px;
+  text-align: center;
 }
 .questionnumber {
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 15px;
   flex-direction: column;
   font-size: 18px;
+}
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  flex-direction: column;
+}
+.question {
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  grid-template-rows: 100px 150px 50px 50px;
+  gap: 50px;
+}
+
+.gridreponse {
+  display: grid;
+  grid-template-columns: 200px 200px;
+  grid-template-rows: 50px 50px;
+  gap: 50px;
+}
+.proposition {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(54, 54, 73);
+  border-radius: 50px;
+  cursor: pointer;
+}
+.proposition.bad {
+  background-color: crimson;
+}
+.proposition.good {
+  background-color: teal;
+}
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: dodgerblue;
+  width: 200px;
+  height: 50px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+.end {
+  gap: 30px;
+  text-align: center;
+}
+
+.avis {
+  margin-top: 100px;
+}
+@media screen and (max-width: 500px) {
+  .gridreponse {
+    grid-template-columns: 200px;
+    grid-template-rows: repeat(4, 50px);
+    gap: 30px;
+  }
 }
